--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "helioslauncher",
-  "version": "1.7.0",
-  "productName": "Helios Launcher",
-  "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/)",
+  "name": "moncraftlauncher",
+  "version": "1.7.1",
+  "productName": "MonCraft Launcher",
+  "description": "Modified Helios Launcher",
+  "author": "Helios Launcher - Daniel Scalzi (https://github.com/dscalzi/)",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/dscalzi/HeliosLauncher",
+  "homepage": "https://github.com/maks666999/MonCraftLauncher",
   "bugs": {
-    "url": "https://github.com/dscalzi/HeliosLauncher/issues"
+    "url": "https://github.com/maks666999/MonCraftLauncher/issues"
   },
   "private": true,
   "main": "index.js",
@@ -25,28 +25,28 @@
     "node": "12.x.x"
   },
   "dependencies": {
-    "adm-zip": "^0.4.16",
+    "adm-zip": "^0.4.14",
     "async": "^3.2.0",
-    "discord-rpc": "^3.1.1",
-    "ejs": "^3.1.3",
-    "ejs-electron": "^2.1.0",
-    "electron-updater": "^4.3.1",
-    "fs-extra": "^9.0.1",
+    "discord-rpc": "3.1.0",
+    "ejs": "^3.0.1",
+    "ejs-electron": "^2.0.3",
+    "electron-updater": "^4.2.4",
+    "fs-extra": "^8.1.0",
     "github-syntax-dark": "^0.5.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.5.0",
     "request": "^2.88.2",
-    "semver": "^7.3.2",
-    "tar-fs": "^2.1.0",
+    "semver": "^7.1.3",
+    "tar-fs": "^2.0.0",
     "winreg": "^1.2.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "electron": "^9.1.0",
-    "electron-builder": "^22.7.0",
-    "eslint": "^7.4.0"
+    "electron": "^8.1.1",
+    "electron-builder": "^22.4.0",
+    "eslint": "^6.8.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dscalzi/HeliosLauncher.git"
+    "url": "git+https://github.com/maks666999/MonCraftLauncher.git"
   }
 }
