Nowe tła i zmiany w wyglądzie

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moncraftlauncher",
-  "version": "1.7.1",
-  "productName": "MonCraft Launcher",
+  "version": "1.7.2",
+  "productName": "MonCraftLauncher",
   "description": "Modified Helios Launcher",
   "author": "Helios Launcher - Daniel Scalzi (https://github.com/dscalzi/)",
   "license": "UNLICENSED",
